/*
Copyright (c) 2024 Diagrid Inc.
Licensed under the MIT License.
*/

syntax = "proto3";

package api;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/diagridio/go-etcd-cron/api";

// JobStored is the wrapped stored version of a Job which has a uuid
// associated.
message JobStored {
  // uuid is a unique identifier for the job.
  uint32 uuid = 1;

  // begin is the beginning time of the job.
  oneof begin {
    // start is the epoch time of the job whereby the clock starts on the
    // schedule. The job _will not_ trigger at this time.
    google.protobuf.Timestamp start = 2;

    // due_time is the epoch time of the job whereby the clock starts on the
    // schedule. The job _will_ trigger at this time.
    google.protobuf.Timestamp due_time = 3;
  }

  // expiration is the optional time at which the job should no longer be
  // scheduled and will be ignored and garbage collected thereafter.
  // A job may be removed earlier if repeats are exhausted or schedule doesn't
  // permit.
  optional google.protobuf.Timestamp expiration = 4;

  // job is the job spec.
  Job job = 5;
}

// Job defines a scheduled rhythmic job stored in the database.
// Job holds the desired spec of the job, not the current trigger state, held
// by Counter.
message Job {
  // schedule is an optional schedule at which the job is to be run.
  // Accepts both systemd timer style cron expressions, as well as human
  // readable '@' prefixed period strings as defined below.
  //
  // Systemd timer style cron accepts 6 fields:
  // seconds | minutes | hours | day of month | month        | day of week
  // 0-59    | 0-59    | 0-23  | 1-31         | 1-12/jan-dec | 0-7/sun-sat
  //
  // "0 30 * * * *" - every hour on the half hour
  // "0 15 3 * * *" - every day at 03:15
  //
  // Period string expressions:
	// Entry                  | Description                                | Equivalent To
	// -----                  | -----------                                | -------------
  // @every <duration>      | Run every <duration> (e.g. '@every 1h30m') | N/A
	// @yearly (or @annually) | Run once a year, midnight, Jan. 1st        | 0 0 0 1 1 *
	// @monthly               | Run once a month, midnight, first of month | 0 0 0 1 * *
	// @weekly                | Run once a week, midnight on Sunday        | 0 0 0 * * 0
	// @daily (or @midnight)  | Run once a day, midnight                   | 0 0 0 * * *
	// @hourly                | Run once an hour, beginning of hour        | 0 0 * * * *
  optional string schedule = 1;

  // due_time is the optional time at which the job should be active, or the
  // "one shot" time if other scheduling type fields are not provided.
  // Accepts a "point in time" string in the format of RFC3339, Go duration
  // string (therefore calculated from now), or non-repeating ISO8601.
  optional string due_time = 2;

  // ttl is the optional time to live or expiration of the job.
  // Accepts a "point in time" string in the format of RFC3339, Go duration
  // string (therefore calculated from now), or non-repeating ISO8601.
  optional string ttl = 3;

  // repeats is the optional number of times in which the job should be
  // triggered. If not set, the job will run indefinitely or until expiration.
  optional uint32 repeats = 4;

  // metadata is a arbitrary metadata asociated with the job.
  google.protobuf.Any metadata = 5;

  // payload is the serialized job payload that will be sent to the recipient
  // when the job is triggered.
  google.protobuf.Any payload = 6;
}
